# ARS-FAC-ESP32-Rust

./: .gitignore  Cargo.toml  README.md  build.rs  cargo.toml  config.toml  diagram.json  main.rs  plot_ars_fac.gp  rust-toolchain.toml  simulate_ars_fac.py  simulation_data.csv  wokwi.toml
src/: main.rs
